tests/compile_fail/delegate-extern.rs
use delegate_attr::delegate;

#[delegate(x)]
#[cfg(not(fake))]
extern "C" {}

fn main() {}
