tests/compile_fail/delegate-extern.stderr
error: expected an impl block or method inside impl block
 --> $DIR/delegate-extern.rs:5:1
  |
5 | extern "C" {}
  | ^^^^^^
